# awesome-claude-md

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ANALYSIS_TEMPLATE.md  AUTOMATED_DISCOVERY.md  BEST_PRACTICES.md  CLAUDE.md  CONTRIBUTING.md  CRITERIA.md  Claude.md  LICENSE_DETECTION.md  README.md  REVIEW_FINDINGS.md  detect_licenses.py  mock_license_results.json  pyproject.toml  test_license_detection.py  verify_examples.py
.claude/: settings.local.json
.claude/agents/: claude-md-expert.md  example-curator.md  project-docs-curator.md  website-developer.md
.claude/commands/: evaluate-quality.md  sync.md  update-readme-nav.md
.github/: EVALUATION_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  criteria-improvement.md  general-issue.md  improve-analysis.yml  improvement.md  new-example-submission.md  new-example.md  report-problem.yml  suggest-new-example.yml
.github/workflows/: deploy-site.yml  discover-claude-files.yml  discover-claude-tools.yml  process-discovery-issues.yml  test.yml  update-licenses.yml
docs/: DESIGN.md  _config.yml  astro.config.mjs  index.html  package-lock.json  package.json  tailwind.config.mjs
docs/_layouts/: default.html
docs/public/: scenarios.json
scripts/: __init__.py  discover_claude_files.py  discover_claude_tools.py  extract_scenarios.py  process_issue.py  test_discover_claude_files.py  test_integration.py  verification_results.json  verify_examples.py
scripts/discovery/: AGENTS.md  (+7 more)
tests/: __init__.py  test_discover_claude_files.py  test_integration.py  test_process_issue.py
(+178 files in other folders)
